weixin模板 后台标签批量添加BUG

--- a/template/weixin/article.htm
+++ b/template/weixin/article.htm
@@ -20,7 +20,7 @@
 			<article>
 			<h1><!--{$article.title}--></h1>
 			<div class="info">
-				<!--{$article.pubdate|date:"Y-m-d H:s"}--> <!--{$article.user.at}-->
+				<!--{$article.pubdate|date:"Y-m-d H:s"}--> <span class="muted">·</span> <!--{$article.user.at}-->
 			</div>
 			<div class="article_body">
 				<div class="content">
