--- a/template/weixin/tag.index.htm
+++ b/template/weixin/tag.index.htm
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 	<head>
-		<title><!--{$category.name}-->_<!--{$site.title}-->_<!--{$site.seotitle}--></title>
-		<meta name="keywords" content="<!--{$category.keywords}-->" />
-		<meta name="description" content="<!--{$category.description}-->"/>
+		<title><!--{$tag.name}-->_<!--{$site.title}-->_<!--{$site.seotitle}--></title>
+		<meta name="keywords" content="<!--{$tag.keywords}-->" />
+		<meta name="description" content="<!--{$tag.description}-->"/>
 		<!--{iCMS:public:ui}-->
 	</head>
 	<body class="iCMS-weixin">
 		<!--{include file="./navbar.htm"}-->
 		<div class="container" id="index_wrapper">
 			<div class="index_title">
-				<span class="label label-default"><!--{$category.name}-->最新文章</span>
+				<span class="label label-default"><!--{$tag.name}-->最新文章</span>
 			</div>
 			<div class="index_pic_list">
 				<ul class="media-list">
-					<!--{iCMS:article:list loop="true" row="5" cid="$category.cid"}-->
+					<!--{iCMS:article:list loop="true" row="5" tid="$tag.id"}-->
 					<li class="media">
 						<!--{if $article_list.first && $article_list.pic}-->
 						<div class="media-pic">
@@ -24,7 +24,7 @@
 						<!--{else}-->
 						<!--{if $article_list.pic}-->
 						<a class="pull-right" href="<!--{$article_list.url}-->">
-							<img class="media-object" src="<!--{$article_list.pic.url}-->" alt="<!--{$article_list.title}-->">
+						<img class="media-object" src="<!--{$article_list.pic.url}-->" alt="<!--{$article_list.title}-->">
 						</a>
 						<!--{/if}-->
 						<a href="<!--{$article_list.url}-->">
