--- a/template/default/header.htm
+++ b/template/default/header.htm
@@ -1,7 +1,7 @@
 <div id="header">
     <div class="header-content">
       <div class="search pull-right">
-        <div class="tools pull-right"> <a href="#"><i class="fa fa-rss"></i> 订阅</a> <a href="javascript:window.external.AddFavorite('<!--{$site.url}-->','<!--{$site.title}-->');"><i class="fa fa-bookmark fa-1"></i> 收藏</a> </div>
+        <div class="tools pull-right"></div>
         <div class="nav_login" id="iCMS-nav-login"> <a href="<!--{iCMS:router url='/api/user/login'}-->" class="iCMS_user_login" title="登录"><i class="fa fa-user"></i> 登录</a> <a href="<!--{iCMS:router url='/api/user/register'}-->" target="_blank"><i class="fa fa-heart"></i> 注册</a> </div>
         <div class="nav_profile" id="iCMS-nav-profile">
           <!--{include file="iCMS://user/menu.htm"}-->
