--- a/template/iCMS/mobile/user/menu.htm
+++ b/template/iCMS/mobile/user/menu.htm
@@ -1,6 +1,6 @@
 <div class="iCMS_profile_wrap btn-group">
   <a class="iCMS_user_home dropdown-toggle" data-toggle="dropdown" href="<!--{iCMS:router url='/user/home'}-->">
-    <img class="avatar r3" src="<!--{$site.urls.ui}-->/avatar.gif" onerror="iCMS.user.noavatar();">
+    <img class="avatar r3" src="<!--{$site.urls.ui}-->/avatar.gif" onerror="iCMS.user.noavatar(this);">
     <span class="label label-success">
       <span class="name">iCMS</span>
       <i class="caret"></i>
