--- a/template/iCMS/mobile/user/profile/avatar.htm
+++ b/template/iCMS/mobile/user/profile/avatar.htm
@@ -4,7 +4,7 @@
 </style>
   <h3 class="title"> <span>设置头像</span> </h3>
   <div id="avatar_box">
-    <img id="avatar" src="<!--{$me.avatar}-->?<!--{$iCMS.TIME}-->" alt="个人封面" onerror="iCMS.user.noavatar();">
+    <img id="avatar" src="<!--{$me.avatar}-->?<!--{$iCMS.TIME}-->" alt="个人封面" onerror="iCMS.user.noavatar(this);">
   </div>
   <span id="avatar_info" class="label label-info hide"></span>
   <div class="clearfix mt10"></div>
