--- a/template/iCMS/mobile/user/profile/custom.htm
+++ b/template/iCMS/mobile/user/profile/custom.htm
@@ -5,7 +5,7 @@
 </style>
 <h3 class="title"> <span>设置主页封面</span> </h3>
   <div id="coverpic_box">
-    <img id="coverpic" src="<!--{$user.coverpic.mo}-->?<!--{$iCMS.TIME}-->" alt="个人封面" onerror="iCMS.user.nocover('m');">
+    <img id="coverpic" src="<!--{$user.coverpic.mo}-->?<!--{$iCMS.TIME}-->" alt="个人封面" onerror="iCMS.user.nocover(this,'m');">
   </div>
   <span id="coverpic_info" class="label label-info hide"></span>
   <div class="clearfix mt10"></div>
