--- a/template/iCMS/user/manage/fans.htm
+++ b/template/iCMS/user/manage/fans.htm
@@ -5,7 +5,7 @@
         <!--{iCMS:user:follow loop="true" check="true" row="30" fuid=$user.uid}-->
         <tr>
           <td class="avatar_35"><a title="<!--{$user_follow.name}-->" href="<!--{$user_follow.url}-->">
-              <img class="iCMS_user_avatar avatar_35" data-tip="iCMS:ucard:<!--{$user_follow.uid}-->" src="<!--{$user_follow.avatar}-->" onerror="iCMS.user.noavatar();">
+              <img class="iCMS_user_avatar avatar_35" data-tip="iCMS:ucard:<!--{$user_follow.uid}-->" src="<!--{$user_follow.avatar}-->" onerror="iCMS.user.noavatar(this);">
             </a></td>
           <td><div class="info"> <span class="label"><!--{$user_follow.name}--></span> </div></td>
           <td class="span2"><div data-param='{"uid":"<!--{$user_follow.uid}-->","name":"<!--{$user_follow.name}-->"}'>
