--- a/template/iCMS/user/profile/custom.htm
+++ b/template/iCMS/user/profile/custom.htm
@@ -1,6 +1,6 @@
 <div class="title"> <span>设置主页封面</span> </div>
   <div id="coverpic_box">
-    <img id="coverpic" src="<!--{$user.coverpic.pc}-->?<!--{$iCMS.TIME}-->" alt="个人封面" onerror="iCMS.user.nocover();">
+    <img id="coverpic" src="<!--{$user.coverpic.pc}-->?<!--{$iCMS.TIME}-->" alt="个人封面" onerror="iCMS.user.nocover(this);">
   </div>
   <span class="label label-important">封面图片建议尺寸：960像素 * 300像素</span>
   <div class="clearfix mt10"></div>
