--- a/template/iCMS/user/manage/inbox.htm
+++ b/template/iCMS/user/manage/inbox.htm
@@ -17,7 +17,7 @@
 				<tr id="id-<!--{$user_inbox.id}-->">
 					<td class="avatar_35">
 						<a data-tip="iCMS:ucard:<!--{$user_inbox.user.uid}-->" href="<!--{$user_inbox.user.url}-->">
-							<img class="iCMS_user_avatar avatar_35" src="<!--{$user_inbox.user.avatar}-->" onerror="iCMS.user.noavatar();">
+							<img class="iCMS_user_avatar avatar_35" src="<!--{$user_inbox.user.avatar}-->" onerror="iCMS.user.noavatar(this);">
 						</a>
 					</td>
 						<td>
