微信公众平台 接口

--- a/template/iCMS/user/card.htm
+++ b/template/iCMS/user/card.htm
@@ -10,7 +10,7 @@
     <div class="lower clearfix">
       <div class="meta">
         <a class="item" target="_blank" href="<!--{$user.urls.home}-->"> <span class="value"><!--{$user.article|num10K}--></span> <span class="key">文章</span> </a>
-        <a class="item" target="_blank" href="<!--{$user.urls.comment}-->"> <span class="value"><!--{$user.comments|num10K}--></span> <span class="key">评论</span> </a>
+        <a class="item" target="_blank" href="javascript:;"> <span class="value"><!--{$user.comments|num10K}--></span> <span class="key">评论</span> </a>
         <a class="item" target="_blank" href="<!--{$user.urls.fans}-->"> <span class="value"><!--{$user.fans|num10K}--></span> <span class="key">关注者</span> </a>
       </div>
       <div class="operation" data-param='{"uid":"<!--{$user.uid}-->","name":"<!--{$user.nickname}-->"}'>
