--- a/template/iCMS/agreement.htm
+++ b/template/iCMS/agreement.htm
@@ -11,7 +11,7 @@
 </head>
 <body>
 <!--{include file="{iTPL}/header.htm"}-->
-<div id="body" class="clearfix">
+<div id="body">
   <div class="iCMS_agreement_wrap">
     <div class="agr_h">
       <h1><!--{$site.title}-->网络服务协议</h1>
