--- a/template/iCMS/mobile/user/manage/publish.htm
+++ b/template/iCMS/mobile/user/manage/publish.htm
@@ -31,7 +31,7 @@
 		</div>
 	</div>
 	<div class="clearfix mt10"></div>
-	<div class="input-group clearfix mt10">
+	<div class="input-group">
 	  <span class="input-group-addon">标 题</span>
 	  <input class="form-control" name="title" id="title" type="text" value="<!--{$article.title}-->" placeholder="请输入标题">
 	</div>
