--- a/template/iCMS/public.common.htm
+++ b/template/iCMS/public.common.htm
@@ -9,10 +9,12 @@
             <dt>
               <input type="text" name="uname" data-container=".login_fail" class="iCMS_login_uname" placeholder="邮箱 或 昵称">
             </dt>
+            <div class="clearfix"></div>
             <dd>密 码：</dd>
             <dt>
               <input type="password" name="pass" data-container=".login_fail" class="iCMS_login_pass">
             </dt>
+            <div class="clearfix"></div>
             <!--{if $iCMS.CONFIG.user.loginseccode}-->
             <dd>验证码：</dd>
             <dt>
