--- a/template/iCMS/public.dialog.htm
+++ b/template/iCMS/public.dialog.htm
@@ -1,7 +1,8 @@
 <div id="iCMS-report-box">
     <div class="iCMS_report_dialog">
       <div class="header">请选择理由</div>
-      <ul class="options clearfix">
+      <div class="clearfix"></div>
+      <ul class="options">
         <li>
           <label>
             <input value="1" name="reason" type="radio">
@@ -31,7 +32,8 @@
           </p>
         </li>
       </ul>
-      <div class="buttons clearfix"> <a class="cancel">取消</a>
+      <div class="clearfix"></div>
+      <div class="buttons"> <a class="cancel">取消</a>
         <button type="button" name="ok" class="btn btn-primary">确定</button>
       </div>
     </div>
@@ -52,9 +54,11 @@
         <dd>
           <textarea class="pm_content" name="content"></textarea>
         </dd>
-        <div class="pm_warnmsg clearfix">请填写私信内容。</div>
+        <div class="clearfix"></div>
+        <div class="pm_warnmsg">请填写私信内容。</div>
       </dl>
-      <div class="buttons clearfix mt15"> <a class="cancel">取消</a>
+      <div class="clearfix mt15"></div>
+      <div class="buttons"> <a class="cancel">取消</a>
         <button type="button" name="send" class="btn btn-primary">发送</button>
       </div>
     </div>
@@ -65,7 +69,8 @@
         <div class="favorite_list_content">
           <img src="<!--{$site.urls.ui}-->/img/loading.gif" /> 加载中,请稍侯......
         </div>
-        <div class="buttons clearfix mt15">
+        <div class="clearfix mt15"></div>
+        <div class="buttons">
           <a class="create fl" href="javascript:;">+ 创建收藏夹</a>
           <button type="button" name="favorite" class="cancel btn btn-primary">关闭</button>
         </div>
@@ -86,7 +91,8 @@
             <b> 私密 </b><span class="gray">只有你可以查看这个收藏夹</span>
           </label>
         </div>
-        <div class="buttons clearfix mt15">
+        <div class="clearfix mt15"></div>
+        <div class="buttons">
           <a class="cancel_create mr20" href="javascript:;">取消</a>
           <button type="button" name="create" class="btn btn-primary">确认创建</button>
         </div>
