--- a/template/iCMS/user/card.htm
+++ b/template/iCMS/user/card.htm
@@ -7,7 +7,8 @@
       <div class="secondary"><!--{$secondary}--></div>
       <!--{/if}-->
     </div>
-    <div class="lower clearfix">
+    <div class="clearfix"></div>
+    <div class="lower">
       <div class="meta">
         <a class="item" target="_blank" href="<!--{$user.urls.home}-->"> <span class="value"><!--{$user.article|num10K}--></span> <span class="key">文章</span> </a>
         <a class="item" target="_blank" href="javascript:;"> <span class="value"><!--{$user.comments|num10K}--></span> <span class="key">评论</span> </a>
