--- a/template/iCMS/user/home.htm
+++ b/template/iCMS/user/home.htm
@@ -14,7 +14,7 @@
 </head>
 <body>
   <!--{include file="{iTPL}/header.htm"}-->
-  <div class="userApp_home clearfix">
+  <div class="userApp_home">
     <div class="userApp_header">
       <div class="card_banner"> <img src="<!--{$user.coverpic.pc}-->" alt="<!--{$user.nickname}-->的封面" onerror="iCMS.user.nocover(this);"> </div>
       <div class="card_top">
