--- a/template/iCMS/user/profile/base.htm
+++ b/template/iCMS/user/profile/base.htm
@@ -170,7 +170,8 @@
         <dd>
           <textarea name="slogan" class="span5" style="padding: 5px;" rows="5" placeholder="随便写点什么，让大家了解你吧。"><!--{$userdata.slogan}--></textarea>
         </dd>
-        <dd class="clearfix mt20 pl40">
+        <div class="clearfix mt20"></div>
+        <dd class="pl40">
           <input type="submit" class="btn btn-primary btn-large" value="确认修改">
         </dd>
       </dl>
