--- a/template/iCMS/user/profile/setpassword.htm
+++ b/template/iCMS/user/profile/setpassword.htm
@@ -28,7 +28,8 @@
             <img src="<!--{iCMS:router url='/api/seccode'}-->" alt="验证码" class="iCMS_seccode_img r3"/>
             <a href="javascript:;" class="iCMS_seccode_text" style="float: none">换一张</a>
         </dd>
-        <dd class="clearfix mt20 pl40">
+        <div class="clearfix mt20"></div>
+        <dd class="pl40">
           <input class="btn btn-primary btn-large" type="submit" value="确认修改">
           <input class="btn" type="reset" value="取消">
         </dd>
