--- a/app/ui/common/iCMS-6.0.0.css
+++ b/app/ui/common/iCMS-6.0.0.css
@@ -102,7 +102,7 @@ a:hover { text-decoration: none; }
 .clear_in { overflow: hidden; zoom: 1 }
 .clearfix:before, .clearfix:after { display: table; content: "" }
 .clearfix:after { clear: both }
-.clearfix { zoom: 1; clear: both }
+.clearfix { zoom: 1; clear: both;+height: 1px; }
 .clear { display: block; visibility: hidden; clear: both; overflow: hidden; width: 0; height: 0 }
 .posr { position: relative }
 .posa { position: absolute }
@@ -117,13 +117,12 @@ a:hover { text-decoration: none; }
 .error { color: #C33; }
 .bull { padding: 0 3px; color: #BBB; display: inline-block; font-family: Arial; }
 .btn { outline: none !important; outline-style: none !important; }
-
 /* dialog */
-.iCMS_dialog { -webkit-border-radius: 6px; -moz-border-radius: 6px; border-radius: 6px; border: 1px solid #888; -webkit-box-shadow: 0 0 80px 0 rgba(0, 0, 0, 0.4); -moz-box-shadow: 0 0 80px 0 rgba(0, 0, 0, 0.4); box-shadow: 0 0 80px 0 rgba(0, 0, 0, 0.4); background: #fff; z-index: 99999 !important; }
+.iCMS_dialog {-webkit-border-radius: 6px; -moz-border-radius: 6px; border-radius: 6px; border: 1px solid #888; -webkit-box-shadow: 0 0 80px 0 rgba(0, 0, 0, 0.4); -moz-box-shadow: 0 0 80px 0 rgba(0, 0, 0, 0.4); box-shadow: 0 0 80px 0 rgba(0, 0, 0, 0.4); background: #fff; z-index: 99999 !important; }
 .iCMS_dialog .ui-dialog { opacity: 1; border: 0px; box-shadow: none; background-color: inherit; }
-.iCMS_dialog .ui-dialog-header { position: relative; background-color: #1575D5; background-image: -moz-linear-gradient(top, #1d7fe2, #0865c2); background-image: -ms-linear-gradient(top, #1d7fe2, #0865c2); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1D7FE2), to(#0865C2)); background-image: -webkit-linear-gradient(top, #1D7FE2, #0865C2); background-image: -o-linear-gradient(top, #1d7fe2, #0865c2); background-image: linear-gradient(top, #1d7fe2, #0865c2); background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1d7fe2', endColorstr='#0865c2', GradientType=0); padding: 0px; cursor: move; border-radius: 6px 6px 0 0; border: 1px solid #0D6EB8; box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1) inset, 0 1px 1px rgba(0, 0, 0, 0.2); margin: -1px -1px 0; line-height: 14px; }
-.iCMS_dialog .ui-dialog-header .ui-dialog-title { color: #fff; text-shadow: 0 1px 1px rgba(0, 0, 0, .4); font-size: 15px; font-weight: 700; padding: 6px 15px; cursor: move; }
-.iCMS_dialog .ui-dialog-header .ui-dialog-close { top: 0px; right: 0px; padding: 8px 12px; }
+.iCMS_dialog .ui-dialog-header {position: relative; background-color: #1575D5; background-image: -moz-linear-gradient(top, #1d7fe2, #0865c2); background-image: -ms-linear-gradient(top, #1d7fe2, #0865c2); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1D7FE2), to(#0865C2)); background-image: -webkit-linear-gradient(top, #1D7FE2, #0865C2); background-image: -o-linear-gradient(top, #1d7fe2, #0865c2); background-image: linear-gradient(top, #1d7fe2, #0865c2); background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1d7fe2', endColorstr='#0865c2', GradientType=0); padding: 0px; cursor: move; border-radius: 6px 6px 0 0; border: 1px solid #0D6EB8; box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1) inset, 0 1px 1px rgba(0, 0, 0, 0.2); margin: -1px -1px 0; line-height: 14px; }
+.iCMS_dialog .ui-dialog-header .ui-dialog-title {color: #fff; text-shadow: 0 1px 1px rgba(0, 0, 0, .4); font-size: 15px; font-weight: 700; padding: 6px 15px; cursor: move; }
+.iCMS_dialog .ui-dialog-header .ui-dialog-close {top: 0px; right: 0px; padding: 8px 12px; }
 .iCMS_dialog .ui-dialog-body { padding: 0px; }
 .iCMS_dialog .ui-dialog-table { height: 100%; width: 100%; vertical-align: middle; }
 .iCMS_dialog .ui-dialog-content { color: #222; padding: 10px; max-width: 760px; max-height: 500px; min-width: 240px; min-height: 90px; }
@@ -223,3 +222,11 @@ a:hover { text-decoration: none; }
 .iCMS_icon_male, .iCMS_icon_female { float: left; width: 16px; height: 16px; overflow: hidden; margin: 4px 2px 0px 5px; vertical-align: middle; background: url(img/gender.png) no-repeat top left; }
 .iCMS_icon_female { background-position: 4px 0px; }
 .iCMS_icon_male { background-position: -12px 0px; }
+
+/* IE7 fix*/
+.clearfix {+height: 0px; }
+.btn{+margin-top: 1px;}
+.iCMS_dialog {+max-width: 620px;}
+.iCMS_dialog .ui-dialog-header {+height: 40px;}
+.iCMS_dialog .ui-dialog-header .ui-dialog-title { +margin-top: 4px;}
+.iCMS_dialog .ui-dialog-header .ui-dialog-close { +padding-top: 4px;}
