--- a/template/iCMS/public.ui.htm
+++ b/template/iCMS/public.ui.htm
@@ -26,7 +26,7 @@
 window.iCMS.init({
 	API:"<!--{iCMS:router url='/api'}-->",
 	PUBLIC:"<!--{$site.urls.public}-->",
-	COOKIE:'<!--{$iCMS.COOKIE_PRE}-->',
+	COOKIE:'<!--{$iCMS.COOKIE_PRE}-->'
 });
 $(function(){
 	iCMS.run();
