--- a/template/iCMS/user/home.favorite.htm
+++ b/template/iCMS/user/home.favorite.htm
@@ -16,9 +16,10 @@
 			</div>
 			<div class="data">
 				<!--{iCMS:favorite:data loop="true" row="3" userid="$user.uid" fid="$favorite_list.id"}-->
-				<p class="clearfix">
+				<p>
 					<a class="fav-data-link" href="<!--{$favorite_data.url}-->"><!--{$favorite_data.title}--></a>
 				</p>
+				<div class="clearfix"></div>
 				<!--{/iCMS}-->
 				<a class="gray" href="<!--{$favorite_list.url}-->">查看全部 »</a>
 			</div>
