--- a/template/iCMS/user/manage/publish.htm
+++ b/template/iCMS/user/manage/publish.htm
@@ -57,9 +57,8 @@ iCMS.config.UI        = '<!--{$iCMS.UI}-->';
         <input class="span5" name="source" id="source" type="text" value="<!--{$article.source}-->">
       </div>
       <div class="clearfix mb10"></div>
-      <div class="clearfix ">
-        <script type="text/plain" id="editor" style="width:100%;height:360px;"><!--{$article_data.body}--></script>
-      </div>
+      <script type="text/plain" id="editor" style="width:100%;height:360px;"><!--{$article_data.body}--></script>
+      <div class="clearfix"></div>
       <div class="form-actions">
         <button class="btn btn-primary" type="submit" id="iCMS-article"><i class="fa fa-check"></i> 提交</button>
       </div>
