--- a/template/iCMS/user/profile.htm
+++ b/template/iCMS/user/profile.htm
@@ -11,11 +11,11 @@
 </head>
 <body>
   <!--{include file="{iTPL}/header.htm"}-->
-  <div id="body_wrap" class="clearfix">
+  <div id="body_wrap">
     <div class="userApp-box">
       <div class="piece">
         <div class="piece_hd"> <b class="hl"></b> <b class="hr"></b> </div>
-        <div class="piece_bd clearfix">
+        <div class="piece_bd">
           <div class="sidebar fl">
             <h1><i class="fa fa-cogs" style="font-size: 18px;"></i> 账号设置</h1>
             <div class="base_info"> <a href="<!--{iCMS:router url='/user/profile/base'}-->"<!--{if $pg=="base"}--> class="c"<!--{/if}-->><i class="fa fa-info-circle"></i> 基本信息</a><br>
